<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/tv_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_library_books_24" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Daftar Sekarang"
        android:textColor="@color/redsemi"
        android:textAlignment="center"
        android:textSize="40dp" />
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Silahkan daftar dengan identitas yang benar"
        android:textSize="14sp"
        android:textColor="@color/redsemi"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>
    <EditText
        android:id="@+id/signUpnameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/signiUpEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/signUpusernameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/signUppasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/SignUpbuttonid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_custom"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/SigninHerebuttonid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/swipeLeft"
            android:layout_below="@+id/SignUpbuttonid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_left"
            android:text="Atau" />
        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login Jika sudah punya Akun "
            android:textSize="14sp"
            android:textColor="@color/redsemi"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</LinearLayout>
